tests/for_loop_reserved_words/error.txt
Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:2
 Cannot use reserved word "in" as `for` loop item name
  2|     for in, match, while in 0..10 {}
             ^^

Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:2
 Cannot use reserved word "match" as `for` loop index name
  2|     for in, match, while in 0..10 {}
                 ^^^^^

Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:2
 Cannot use reserved word "while" as `for` loop last item flag name
  2|     for in, match, while in 0..10 {}
                        ^^^^^

Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:3
 Cannot use reserved word "struct" as `for` loop item name
  3|     for struct, enum, import of 0..10 {}
             ^^^^^^

Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:3
 Cannot use reserved word "enum" as `for` loop index name
  3|     for struct, enum, import of 0..10 {}
                     ^^^^

Parse error: ./tests/for_loop_reserved_words/for_loop_reserved_words.fae:3
 Cannot use reserved word "import" as `for` loop last item flag name
  3|     for struct, enum, import of 0..10 {}
                           ^^^^^^
